# ogltest

./: CMakeLists.txt
src/: answer.cpp  main.cpp  shader.cpp
